<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MVP-Kotlin</string>
    <string name="github_user">github username</string>
    <string name="login">Login</string>
    <string name="input_user">input github username</string>
    <string name="net_error">net error</string>
    <string name="repos">Repos</string>
    <string name="my">My</string>
    <string name="following">Following</string>
    <string name="logout">Logout</string>
    <string name="events">events</string>
    <string name="starred">starred</string>
    <string name="followers">followers</string>
    <string name="load_error">Network Error</string>
    <string name="reload">Reload</string>
    <string name="loading">loading…</string>
    <string name="load_error_click">load failed, click retry</string>
    <string name="load_not_more">no more data</string>
    <string name="followers_count">count: %s people</string>
    <string name="exit_go_out">double click to exit</string>
    <string name="action">action:\t%s</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="enter">enter</string>
    <string name="logout_user">Exit the current user?</string>
    <string name="format_star">start: %s</string>
    <string name="format_fork">fork: %s</string>
    <string name="format_issues">issues: %s</string>
    <string name="format_update">update: %s</string>
    <string name="format_create">create: %s</string>
    <string name="net_time_out">net time out</string>
</resources>
