<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_github_logo"
        android:layout_width="260dp"
        android:layout_height="267dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_logo_github" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_github_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/color_333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_github"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/icon_user_github"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/github_user"
            android:inputType="text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_user"
            android:textColor="@color/color_FF1A1A"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_39B6DF"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
